--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -982,8 +982,6 @@ ru:
           message: 
           email_placeholder: E-Mail адрес *
           name_placeholder: Имя *
-          email: 
-          name: 
       nav_lang:
         legal_title: Юридический текст clarat можно читать только на немецком языке.
         title: "Автоматический перевод! \n<br><br>\nНекоторые тексты clarat переведены на твой язык Google Translate. Иногда эти тексты могут звучать несколько странно и неправильно. Мы работаем над улучшением качества наших переводов."
@@ -1240,6 +1238,8 @@ ru:
       tine: Она - социальный педагог. Она умеет выслушивать людей. Кроме того, она - писатель. Это значит, что она хорошо владеет языком и пишет хорошие истории. В clarat она работает в исследовательской команде. Её любимая песня Survive от Ghostpoet.
       title: Über Uns
       verena: Оан изучала гендерные исследования. Это значит, что она много знает о разных гендерах и о нашем обществе. Она хорошо организовывает. В clarat она работает в исследовательской команде . Её любимая песня - Metropolis отNeonschwarz.
+      nicole: 
+      tian: 
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
