Omar new about us text

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1626,7 +1626,7 @@ de:
         Internetseiten programmieren. Ihm fällt immer eine gute Lösung ein und
         er lernt schnell. Bei clarat ist er im IT-Team. Sein Lieblingssong ist
         Jein von Fettes Brot.
-      omar: Hat Computer-Ingenieurwesen studiert. Er kann gut Internetseiten programmieren und schnell komplizierte Dinge verstehen. Bei clarat ist er im IT-Team. Sein Lieblingssong ist Nothing Else Matters von Metallica.
+      omar: Hat Computer-Ingenieurwesen studiert. Er kann gut programmieren und schnell komplizierte Dinge verstehen. Bei clarat ist er im Marketing-Team. Sein Lieblingssong ist Nothing Else Matters von Metallica.
       patrick: Hat Geschichte und Politik studiert. Er weiß besonders viel über das Land Jamaika. Er kann gut komplizierte Dinge verstehen. Bei clarat ist er im Research-Team. Sein Lieblingssong ist Kingston Be Wise von Protoje.
       philipp: Hat Geschichte, Politik und Recht studiert. Er kann gut komplizierte Sachen verstehen. Bei clarat ist er im Research-Team. Und er sorgt dafür, dass wir gut arbeiten können. Sein Lieblingssong ist This Is Our Science von Astronautalis.
       sabine: Ist Soziologin. Das heißt, sie weiß viel über die Gesellschaft. Sie kann gut komplizierte Sachen verstehen. Bei clarat ist sie im Research-Team. Und sie erklärt uns die deutschen Asylgesetze. ihr Lieblingssong ist Vesna von Kino.
