clarat-org/clarat#1153 - update _base for new language filters, updated localeapp, fixate nokogumbo to 1.4.11 (1.4.12 causes problems on heroic) and fixed bug with translation entry

--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -553,6 +553,7 @@ fa:
         ber: Ber
         bos: Bos
         bul: Bul
+        bur: Bur
         cau: Cau
         ckb: Ckb
         cpe: Cpe
@@ -563,12 +564,15 @@ fa:
         dyu: Dyu
         ell: Ell
         eng: Eng
+        est: Est
         ewo: Ewo
         fas: Fas
         fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        ful: Ful
+        geo: Geo
         hau: Hau
         hbs: Hbs
         heb: Heb
@@ -598,6 +602,7 @@ fa:
         rom: Rom
         ron: Ron
         rus: Rus
+        sdh: Sdh
         skr: Skr
         slo: Slo
         slv: Slv
@@ -606,6 +611,7 @@ fa:
         spa: Spa
         sqi: Sqi
         srp: Srp
+        sus: Sus
         swa: Swa
         swe: Swe
         tam: Tam
@@ -633,6 +639,8 @@ fa:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+  formtastic:
+    required: required
   free: 
   js:
     ajax_error:
@@ -916,15 +924,15 @@ fa:
         beta_modal:
           link: برای ما پیغام بنویسید
           text: صفحه اینترنتی ما clarat.org جدید می باشد.در برلین می توانی پیشنهاد های کمکی زیادی را جستجو کنی.به زودی پیشنهاد های کمکی برای شهرهای دیگر را نیز جمع آوری می کنیم.از کمک شما استقبال می کنیم:آیا چیزی را دیدی که ما بهتر می توانیم آن را ارائه دهیم یا اینکه چیزی به درستی انجام نمی شود؟پس
-        unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
         popup:
+          button: بله،لطفا
+          email_placeholder: عنوان الإیمیل *
           footer: از نام و آدرس ایمیل تو فقط در جهت برقراری ارتباط با تو استفاده می شود.تو بوسیله آنها مشترک هیچگونه مجله خبری از طریق ایمیل نمی شوی و آدرس ایمیل تو به شخص ثالثی داده نمی شود.
           headline: ۲۰ یورو برای ابراز نظر تو
-          text: آن چیزی را که ما می توانیم بهبود بدهیم و یا مورد علاقه تو می باشد را به ما اعلام کن.بدین منظور ما با کمال میل با تو تماس می گیریم.آیا اجازه ارسال ایمیل با اعلام جزئیات را به تو داریم؟
-          button: بله،لطفا
           message: من می خواهم در نظرخواهی شرکت کنم.
-          email_placeholder: عنوان الإیمیل *
           name_placeholder: نام *
+          text: آن چیزی را که ما می توانیم بهبود بدهیم و یا مورد علاقه تو می باشد را به ما اعلام کن.بدین منظور ما با کمال میل با تو تماس می گیریم.آیا اجازه ارسال ایمیل با اعلام جزئیات را به تو داریم؟
+        unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
       nav_lang:
         legal_title: در  clarat متن های قانونی فقط به زبان آلمانی قابل خواندن هستند.
         title: |-
@@ -1083,6 +1091,8 @@ fa:
       what:
         code_word: 'نام کمک نزد عرضه کننده:'
         heading: موضوع چیست؟
+        offertaxonomy:
+          heading: 
       who: کجا این کمک را دریافت می کنی؟
       who_contact_people:
         dr: دکتر
@@ -1162,6 +1172,7 @@ fa:
       michaela: او در رشته علوم اقتصاد کامپیوتر تحصیل کرده است.او می تواند دیگران را به هیجان بیاورد و اطلاعات زیادی در مورد رسانه های جدید دارد.در clarat در تیم تحقیق فعالیت می کند و مراقب آن است که صفحه اینترنتی ما به خوبی عمل کند.موسیقی مورد علاقه او Digital Love از Daft Punk می باشد.
       nahla: او کارشناس باستان شناسی است.او اطلاعات زیادی در مورد تاریخ و انسانها دارد.سرعت کار او بالاست.در clarat در تیم ترجمه به زبان عربی فعالیت دارد.موسیقی مورد علاقه او Nassam Allina El Hawa از Fayrouz می باشد.
       nathalie: او در رشته حقوق بشر و سیاست بین الملل تحصیل کرده است.او به خوبی می تواند مسائل را توضیح دهد و همچنین گوش دهد.در clarat در تیم تحقیق فعالیت دارد و برای نظم در صفحه اینترنتی ما تلاش می کند.موسیقی مورد علاقه او Me in You از Kings of Convenience می باشد.
+      nicole: 
       nils: او کارشناس علوم کامپیوتر است.این بدین معنی است که او می تواند به خوبی برنامه های کامپیوتری و صفحات اینترنت را برنامه ریزی کند.او همیشه راه حل مناسب به ذهنش می رسد و سریع یاد می گیرد.در clarat در تیم IT  فعالیت دارد.موسیقی مورد علاقه او Jein از Fettes Brot می باشد.
       omar: او در رشته علوم کامپیوتر تحصیل کرده است.او به خوبی می تواند صفحات اینترنت را برنامه ریزی کند و مسائل پیچیده را درک کند.او در clarat در تیم IT فعالیت می کند و موسیقی مورد علاقه او Nothing Else Matters از Metallica می باشد.
       patrick: او در رشته تاریخ و سیاست تحصیل کرده است.او به خصوص در مورد کشور جامائیکا آگاهی دارد و می توانی چیزهای پیچیده را به خوبی درک کند.او در clarat در تیم تحقیق فعالیت می کند و موسیقی مورد علاقه او Kingston Be Wise از Protoje می باشد.
@@ -1172,11 +1183,10 @@ fa:
       text: |-
         clarat یک پروژه عام المنفعه متعلق به Benckiser Stiftung Zukunft
         (www.benckiser-stiftung.org) می باشد. ما همراه با Benckiser Stiftung از پروژه های موثر مربوط به پشتیبانی کودکان و جوانان حمایت می کنیم.در این راستا یک چیز همیشه به ذهن ما می رسد:خیلی سخت می توان دریافت که چه پیشنهاد های حمایتی به طور کلی وجود دارند و سپس برای ما روشن شد که اگر برای ما کارشناسان تا این حد سخت است نگاه کلی به این موضوع داشته باشیم٬ پس حتما برای کودکان و جوانان که بدنبال کمک واقعی هستند تا چه اندازه سخت تر می تواند باشد و یا برای پناهندگانی که با کشور آلمان آشنایی ندارند؟جواب این سوال:خیلی سخت!و بدین ترتیب ایده پیدایش clarat و تولد آن بوجود آمد.به راحتی کمک یافتن .برای خانواده ها در clarat family و برای پناهندگان در clarat refugees
+      tian: 
       tine: او کارشناس تعلیم و تربیت اجتماعی است.او می تواند به خوبی به آدمها گوش دهد.او همچنین نویسنده است و این بدین معنی است که او می تواند به خوبی داستانهای زیبایی را بنویسد.در clarat در تیم تحقیقات فعالیت دارد و کارشناس تیم زبان ما می باشد.موسیقی مورد علاقه او Survive It از Ghostpoet.
       title: در مورد ما
       verena: او کارشناس مسائل سیاسی است.این بدین معنی است که او اطلاعات زیادی در مورد سیاست و اجتماع دارد.او به خوبی می تواند اطلاعات جمع آوری کند.در clarat در تیم تحقیقات و فرهنگ لغت فعالیت دارد.موسیقی مورد علاقه او Lose It از Oh Wonder می باشد.
-      nicole: 
-      tian: 
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
@@ -1336,6 +1346,7 @@ fa:
     haeufige-fragen: سوالات رایج
     home: خانه
     impressum: 'اطلاعات کلی '
+    kontakt: 
     liste: لیست
     liste-de-services: لیست خدمات
     new: جدید
@@ -1363,6 +1374,14 @@ fa:
           family: اگر اینجا را کلیک کنید٬به clarat Family وارد می شوی.در clarat Family می توانی بدنبال کمک برای کودکان٬جوانان و خانواده ها باشی.
           refugees: اگر اینجا را کلیک کنید٬به clarat Refugees وارد می شوید.در clarat Refugees می توانی بدنبال کمک برای پناهندگان باشی.
   simple_form:
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
+        show:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
@@ -1371,11 +1390,6 @@ fa:
       html: <abbr title="required">*</abbr>
       mark: "*"
       text: ضروری
-    hints:
-      contact:
-        new:
-          email: 
-          name: 
   subscriptions:
     create:
       error: لطفا آدرس ایمیل دقیق خود را بدهید.
