--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -960,6 +960,7 @@ de:
         ber: Ber
         bos: Bos
         bul: Bul
+        bur: Bur
         cau: Cau
         ckb: Ckb
         cpe: Cpe
@@ -976,6 +977,7 @@ de:
         fin: Fin
         fra: Fra
         fuf: Fuf
+        ful: Ful
         hau: Hau
         hbs: Hbs
         heb: Heb
@@ -1005,6 +1007,7 @@ de:
         rom: Rom
         ron: Ron
         rus: Rus
+        sdh: Sdh
         skr: Skr
         slo: Slo
         slv: Slv
@@ -1013,6 +1016,7 @@ de:
         spa: Spa
         sqi: Sqi
         srp: Srp
+        sus: Sus
         swa: Swa
         swe: Swe
         tam: Tam
@@ -1040,6 +1044,8 @@ de:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+  formtastic:
+    required: required
   free: 
   js:
     ajax_error:
@@ -1339,20 +1345,20 @@ de:
             Hilfsangebote für andere Städte. Über deine Hilfe freuen wir uns:
             Hast du etwas gesehen, das wir besser machen können? Oder
             funktioniert etwas nicht richtig? Dann
+        popup:
+          button: Ja, bitte
+          email_placeholder: E-Mail-Adresse *
+          footer: "* Dein Name und deine E-Mail-Adresse werden ausschließlich zur Kontaktaufnahme verarbeitet. Du abonnierst keinen Newsletter und deine E-Mail-Adresse wird nicht an Dritte weitergegeben."
+          headline: 20 Euro für deine Meinung
+          message: Ich möchte an der Umfrage teilnehmen
+          name_placeholder: Name *
+          text: Sag uns, was wir verbessern können. Oder was dir gut gefällt. Gern würden wir dazu mit dir telefonieren. Dürfen wir dir eine E-Mail mit den Details schicken?
         unavailable_location_modal: |
           Für deinen Standort gibt es bei clarat aktuell nur Telefon-Angebote
           oder Online-Angebote. Das heißt, man hilft dir am Telefon oder online.
           Zum Beispiel per E-Mail oder in einem Chat. Wir geben dir gerne
           Bescheid, sobald es bei clarat auch Hilfe in deiner Nähe gibt.
           Trage dazu deine E-Mail-Adresse hier ein.
-        popup:
-          footer: "* Dein Name und deine E-Mail-Adresse werden ausschließlich zur Kontaktaufnahme verarbeitet. Du abonnierst keinen Newsletter und deine E-Mail-Adresse wird nicht an Dritte weitergegeben."
-          headline: 20 Euro für deine Meinung
-          text: Sag uns, was wir verbessern können. Oder was dir gut gefällt. Gern würden wir dazu mit dir telefonieren. Dürfen wir dir eine E-Mail mit den Details schicken?
-          button: Ja, bitte
-          message: Ich möchte an der Umfrage teilnehmen
-          email_placeholder: E-Mail-Adresse *
-          name_placeholder: Name *
       nav_lang:
         legal_title: 
         title: 
@@ -1514,7 +1520,7 @@ de:
         code_word: 'So heißt die Hilfe beim Anbieter:'
         heading: Worum geht's?
         offertaxonomy:
-          heading: 'Hier kennt man sich aus mit:'
+          heading: 'Dieses Angebot hilft dir bei:'
       who: Wo bekommst du diese Hilfe?
       who_contact_people:
         dr: Dr.
@@ -1621,6 +1627,7 @@ de:
       nathalie: 'Hat Menschenrechte und internationale Politik studiert. Sie kann gut erklären. Und gut zuhören. Bei clarat ist sie im Research-Team. Und sie sorgt für Ordnung auf unserer Internetseite. Ihr Lieblingssong ist Me in You von Kings of Convenience.
 
 '
+      nicole: hat Ungarisch studiert. Und sie kann gut Webseiten programmieren. Sie hat immer schnell eine Idee, wie man ein Problem lösen kann. Bei clarat ist sie im IT-Team. Ihr Lieblingssong ist Disorder von Joy Division.
       nils: |
         Ist Informatiker. Das heißt, er kann gut Computerprogramme und
         Internetseiten programmieren. Ihm fällt immer eine gute Lösung ein und
@@ -1645,11 +1652,10 @@ de:
         Antwort ist: Sehr schwer! Und damit war die Idee zu clarat geboren:
         Einfach Hilfe finden. Für Familien auf clarat family. Und für
         Flüchtlinge auf clarat refugees.
+      tian: hat Wirtschaft studiert. Sie hat immer den Überblick und kann gut mit Zahlen umgehen. Bei clarat ist sie im Research-Team. Und sie kümmert sich um die Qualität unserer Arbeit. Ihr Lieblingssong ist Supergirl von Reamonn.
       tine: Ist Sozialpädagogin. Sie kann Menschen gut zuhören. Sie ist auch Schriftstellerin. Das heißt, sie kann gut schöne Geschichten schreiben. Bei clarat ist sie im Research-Team und Expertin für die clarat-Sprache. Ihr Lieblingssong ist Survive It von Ghostpoet.
       title: Über Uns
       verena: Studiert Gender Studies. Das heißt, sie weiß viel über die verschiedenen Geschlechter. Und über unsere Gesellschaft. Sie kann gut ordnen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Metropolis von Neonschwarz.
-      nicole: hat Ungarisch studiert. Und sie kann gut Webseiten programmieren. Sie hat immer schnell eine Idee, wie man ein Problem lösen kann. Bei clarat ist sie im IT-Team. Ihr Lieblingssong ist Disorder von Joy Division.
-      tian: hat Wirtschaft studiert. Sie hat immer den Überblick und kann gut mit Zahlen umgehen. Bei clarat ist sie im Research-Team. Und sie kümmert sich um die Qualität unserer Arbeit. Ihr Lieblingssong ist Supergirl von Reamonn.
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
@@ -1838,6 +1844,7 @@ de:
     haeufige-fragen: haeufige-fragen
     home: home
     impressum: impressum
+    kontakt: kontakt
     liste: liste
     liste-de-services: liste-de-services
     new: new
@@ -1869,6 +1876,13 @@ de:
           family: Wenn du hier klickst, kommst du zu clarat Family. In clarat Family kannst du nach Hilfe für Kinder, Jugendliche und Familien suchen.
           refugees: Wenn du hier klickst, kommst du zu clarat Refugees. In clarat-refugees kannst du nach Hilfe für Flüchtlinge suchen.
   simple_form:
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
+        show:
+          name: 
     placeholders:
       search_form:
         home:
@@ -1877,14 +1891,11 @@ de:
       html: <abbr title="required">*</abbr>
       mark: "*"
       text: required
-    hints:
-      contact:
-        new:
-          email: 
-          name: 
   subscriptions:
     create:
-      error: Bitte gib eine korrekte E-Mail Adresse ein.
+      error: 'Bitte gib eine korrekte E-Mail Adresse ein.
+
+'
       success: |
         Vielen Dank, wir haben soeben einen Bestätigungslink an deine E-Mail
         Adresse gesendet.
