--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -556,6 +556,7 @@ en:
         ber: Ber
         bos: Bos
         bul: Bul
+        bur: Bur
         cau: Cau
         ckb: Ckb
         cpe: Cpe
@@ -566,12 +567,15 @@ en:
         dyu: Dyu
         ell: Ell
         eng: Eng
+        est: Est
         ewo: Ewo
         fas: Fas
         fil: Fil
         fin: Fin
         fra: Fra
         fuf: Fuf
+        ful: Ful
+        geo: Geo
         hau: Hau
         hbs: Hbs
         heb: Heb
@@ -601,6 +605,7 @@ en:
         rom: Rom
         ron: Ron
         rus: Rus
+        sdh: Sdh
         skr: Skr
         slo: Slo
         slv: Slv
@@ -609,6 +614,7 @@ en:
         spa: Spa
         sqi: Sqi
         srp: Srp
+        sus: Sus
         swa: Swa
         swe: Swe
         tam: Tam
@@ -636,6 +642,8 @@ en:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+  formtastic:
+    required: required
   free: 
   js:
     ajax_error:
@@ -909,15 +917,15 @@ en:
             many support services and programmes in Berlin. Soon we will be collecting support services for other
             cities as well. And we appreciate your help: is there anything you think we could do better?
             Or is something not working? Simply
-        unavailable_location_modal: At the moment, we only have telephone or online support services for your current location. That means you can get help over the telephone. Or online. For example, via e-mail or over chat. We will let you know as soon as there are support services near you. Please enter your e-mail address here.
         popup:
+          button: Yes, please
+          email_placeholder: email address *
           footer: "* Your name and email address will only be used to contact you. You won't be subscribing to any newsletters and we won't pass it on to third parties."
           headline: 20 Euros for your thoughts
-          text: Tell us what you like and what we can improve. We'd like to chat with you. Can we send you an email with all the details?
-          button: Yes, please
           message: I'd like to participate
-          email_placeholder: email address *
           name_placeholder: Name *
+          text: Tell us what you like and what we can improve. We'd like to chat with you. Can we send you an email with all the details?
+        unavailable_location_modal: At the moment, we only have telephone or online support services for your current location. That means you can get help over the telephone. Or online. For example, via e-mail or over chat. We will let you know as soon as there are support services near you. Please enter your e-mail address here.
       nav_lang:
         legal_title: Legal text can only be read in German.
         title: |-
@@ -1080,6 +1088,8 @@ en:
       what:
         code_word: 'This is what the service provider calls this support service:'
         heading: What's this about?
+        offertaxonomy:
+          heading: 'This offer helps you with these topics: '
       who: Where can you get this help?
       who_contact_people:
         dr: Dr.
@@ -1227,6 +1237,7 @@ en:
       michaela: Michaela studied commercial information technology. She's good at inspiring others. And she knows a lot about the media. She's part of the clarat research team. And she also makes sure our website is working properly. Her favourite song is "Digital Love" by Daft Punk.
       nahla: Nahla is an archaeologist. She knows a lot about human history. She can work very quickly. She's in the clarat translator team. She translates clarat into Arabic.  Her favourite song ist "Nassam Allina El Hawa" by Fayrouz.
       nathalie: Nathalie studied human rights and international politics. She can explain things well. And she's a good listener, too. She's part of the clarat research team. She makes sure our website is up-to-date. Her favourite song is "Me in You" by Kings of Convenience.
+      nicole: 
       nils: |-
         Nils is a computer scientist, which means he knows how to program
         computer programs and websites. He always comes up with good solutions
@@ -1254,6 +1265,7 @@ en:
         don’t know their way around yet? The answer: very difficult! And that's
         how the idea for clarat came about: helping people find help easily. For families on
         clarat family. And for refugees on clarat refugees.
+      tian: 
       tine: |-
         Tine is a social education worker. She's a good listener. And she's a writer, too.
         This means it's easy for her to write nice stories.
@@ -1261,8 +1273,6 @@ en:
         “Survive It” by Ghostpoet.
       title: About us
       verena: Verena studied Gender Studies. That means she knows lots about the different genders. And about our society. She's good at sorting things out. She's in clarat's research team. Her favourite song is "Metropolis" by Neonschwarz.
-      nicole: 
-      tian: 
     agb:
       heading: Rechtliche Hinweise
       text_html: |-
@@ -1439,6 +1449,7 @@ en:
     haeufige-fragen: frequently-asked-questions
     home: home
     impressum: impressum
+    kontakt: 
     liste: liste
     liste-de-services: liste-de-services
     new: new
@@ -1468,6 +1479,14 @@ en:
           family: Click here to get to clarat family. In clarat family, you can search for help and support services for children, teenagers and families.
           refugees: Click here to get to clarat refugees. In clarat refugees, you can search for help and support services for refugees.
   simple_form:
+    hints:
+      contact:
+        new:
+          email: 
+          name: 
+        show:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
@@ -1476,11 +1495,6 @@ en:
       html: <abbr title="required">*</abbr>
       mark: "*"
       text: required
-    hints:
-      contact:
-        new:
-          email: 
-          name: 
   subscriptions:
     create:
       error: Please enter a valid email address.
