--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1035,6 +1035,8 @@ de:
         wol: Wol
         zho: Zho
         zza: Zza
+        est: Est
+        geo: Geo
       section:
         family: Family
         refugees: Refugees
@@ -1627,7 +1629,7 @@ de:
       nathalie: 'Hat Menschenrechte und internationale Politik studiert. Sie kann gut erklären. Und gut zuhören. Bei clarat ist sie im Research-Team. Und sie sorgt für Ordnung auf unserer Internetseite. Ihr Lieblingssong ist Me in You von Kings of Convenience.
 
 '
-      nicole: hat Ungarisch studiert. Und sie kann gut Webseiten programmieren. Sie hat immer schnell eine Idee, wie man ein Problem lösen kann. Bei clarat ist sie im IT-Team. Ihr Lieblingssong ist Disorder von Joy Division.
+      nicole: Hat Ungarisch studiert. Und sie kann gut Webseiten programmieren. Sie hat immer schnell eine Idee, wie man ein Problem lösen kann. Bei clarat ist sie im IT-Team. Ihr Lieblingssong ist Disorder von Joy Division.
       nils: |
         Ist Informatiker. Das heißt, er kann gut Computerprogramme und
         Internetseiten programmieren. Ihm fällt immer eine gute Lösung ein und
@@ -1652,7 +1654,7 @@ de:
         Antwort ist: Sehr schwer! Und damit war die Idee zu clarat geboren:
         Einfach Hilfe finden. Für Familien auf clarat family. Und für
         Flüchtlinge auf clarat refugees.
-      tian: hat Wirtschaft studiert. Sie hat immer den Überblick und kann gut mit Zahlen umgehen. Bei clarat ist sie im Research-Team. Und sie kümmert sich um die Qualität unserer Arbeit. Ihr Lieblingssong ist Supergirl von Reamonn.
+      tian: Hat Wirtschaft studiert. Sie hat immer den Überblick und kann gut mit Zahlen umgehen. Bei clarat ist sie im Research-Team. Und sie kümmert sich um die Qualität unserer Arbeit. Ihr Lieblingssong ist Supergirl von Reamonn.
       tine: Ist Sozialpädagogin. Sie kann Menschen gut zuhören. Sie ist auch Schriftstellerin. Das heißt, sie kann gut schöne Geschichten schreiben. Bei clarat ist sie im Research-Team und Expertin für die clarat-Sprache. Ihr Lieblingssong ist Survive It von Ghostpoet.
       title: Über Uns
       verena: Studiert Gender Studies. Das heißt, sie weiß viel über die verschiedenen Geschlechter. Und über unsere Gesellschaft. Sie kann gut ordnen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Metropolis von Neonschwarz.
@@ -1883,6 +1885,7 @@ de:
           name: 
         show:
           name: 
+          email: 
     placeholders:
       search_form:
         home:
