pulled locale-app

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -867,7 +867,7 @@ ar:
           email_placeholder: عنوان البريد الإليكتروني *
           footer: إسمك وعنوان الإيميل الخاص بك سوف يستخدمان فقط للتواصل معك. ولن يتم إشراكك في مجموعة إخباريةولن يتم إعطاء إيميلك لطرف ثالث.
           headline: ٢٠ يورو مقابل إبداء رأيك فينا.
-          message: أريد الإشتراك في الإستبيان
+          message: Ich möchte an der Umfrage teilnehmen
           name_placeholder: الإسم *
           text: قل لنا ما الذي يمكننا تحسينه. أو ما الذي يعجبك. يسعدنا التواصل معك تليفونياً. هل يمكن أن نرسل لك إيميل بالتفاصيل؟
         unavailable_location_modal: |
