--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -922,7 +922,7 @@ en:
           email_placeholder: email address *
           footer: "* Your name and email address will only be used to contact you. You won't be subscribing to any newsletters and we won't pass it on to third parties."
           headline: 20 Euros for your thoughts
-          message: I'd like to participate
+          message: Ich möchte an der Umfrage teilnehmen
           name_placeholder: Name *
           text: Tell us what you like and what we can improve. We'd like to chat with you. Can we send you an email with all the details?
         unavailable_location_modal: At the moment, we only have telephone or online support services for your current location. That means you can get help over the telephone. Or online. For example, via e-mail or over chat. We will let you know as soon as there are support services near you. Please enter your e-mail address here.
