--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -7,7 +7,7 @@ fa:
         message: NOTRANSLATE
         name: NOTRANSLATE
       offer:
-        organizations: 
+        organizations: سازمانها
       search_location:
         latitude: NOTRANSLATE
         longitude: NOTRANSLATE
@@ -23,7 +23,7 @@ fa:
       subscription: NOTRANSLATE
       trait_filter:
         identifier:
-          anonymous: 
+          anonymous: گمنام
       update_request: NOTRANSLATE
   anonymous: 
   cells:
@@ -929,7 +929,7 @@ fa:
           email_placeholder: عنوان الإیمیل *
           footer: از نام و آدرس ایمیل تو فقط در جهت برقراری ارتباط با تو استفاده می شود.تو بوسیله آنها مشترک هیچگونه مجله خبری از طریق ایمیل نمی شوی و آدرس ایمیل تو به شخص ثالثی داده نمی شود.
           headline: ۲۰ یورو برای ابراز نظر تو
-          message: من می خواهم در نظرخواهی شرکت کنم.
+          message: Ich möchte an der Umfrage teilnehmen
           name_placeholder: نام *
           text: آن چیزی را که ما می توانیم بهبود بدهیم و یا مورد علاقه تو می باشد را به ما اعلام کن.بدین منظور ما با کمال میل با تو تماس می گیریم.آیا اجازه ارسال ایمیل با اعلام جزئیات را به تو داریم؟
         unavailable_location_modal: در محل زندگی تو و حال حاضر در clarat فقط پیشنهادهای تلفنی یا آنلاین موجود می باشد.این بدین معنی است که به تو کمک تلفنی یا آنلاین می شود.بطور مثال از طریق ایمیل و یا در چت.به محض اینکه در در اینجا و در نزدیکی محل سکونت تو کمکی وجود داشت با کمال میل به تو اطلاع می دهیم.اطفا آدرس ایمیل خود را وارد کنید.
@@ -1055,10 +1055,10 @@ fa:
       speaking: به چه زبانی به تو کمک می شود؟
       trait_filters:
         explanation:
-          accessibility: 
-          anonymous: 
+          accessibility: این بدین معنی است که تو در اینجا می توانی به آرامی با صندلی چرخ دار خود را حرکت بدهی و یا با یک کالسکه کودک
+          anonymous: این بدین معنی است که تو نباید نام خود را اعلام کنی.
           charged: 
-          confidential: 
+          confidential: این بدین معنی است که صحبتهای تو با کارمندان اینجا محرمانه باقی می ماند.
           day_and_night: 
           free: 
         title:
@@ -1071,7 +1071,7 @@ fa:
           family_parents: 
           family_relatives: 
           free: رایگان
-      trait_filters_headline: 
+      trait_filters_headline: اطلاعات بعدی
       website_section:
         internet_presence: اطلاعات بیشتر را کجا در اینترنت پیدا می کنی؟
         websites:
@@ -1092,7 +1092,7 @@ fa:
         code_word: 'نام کمک نزد عرضه کننده:'
         heading: موضوع چیست؟
         offertaxonomy:
-          heading: 
+          heading: 'این پیشنهاد تو را در اینجا کمک می کند:'
       who: کجا این کمک را دریافت می کنی؟
       who_contact_people:
         dr: دکتر
@@ -1172,9 +1172,9 @@ fa:
       michaela: او در رشته علوم اقتصاد کامپیوتر تحصیل کرده است.او می تواند دیگران را به هیجان بیاورد و اطلاعات زیادی در مورد رسانه های جدید دارد.در clarat در تیم تحقیق فعالیت می کند و مراقب آن است که صفحه اینترنتی ما به خوبی عمل کند.موسیقی مورد علاقه او Digital Love از Daft Punk می باشد.
       nahla: او کارشناس باستان شناسی است.او اطلاعات زیادی در مورد تاریخ و انسانها دارد.سرعت کار او بالاست.در clarat در تیم ترجمه به زبان عربی فعالیت دارد.موسیقی مورد علاقه او Nassam Allina El Hawa از Fayrouz می باشد.
       nathalie: او در رشته حقوق بشر و سیاست بین الملل تحصیل کرده است.او به خوبی می تواند مسائل را توضیح دهد و همچنین گوش دهد.در clarat در تیم تحقیق فعالیت دارد و برای نظم در صفحه اینترنتی ما تلاش می کند.موسیقی مورد علاقه او Me in You از Kings of Convenience می باشد.
-      nicole: 
+      nicole: او در رشته زبان مجارستانی تحصیل کرده است و به خوبی می تواند وب سایتها را برنامه ریزی کند.او به همیشه و به سرعت یک ایده جهت حل مشکلات دارد.در clarat در تیم IT فعالیت می کند و موسیقی مورد علاقه او Disorder از Joy Division است.
       nils: او کارشناس علوم کامپیوتر است.این بدین معنی است که او می تواند به خوبی برنامه های کامپیوتری و صفحات اینترنت را برنامه ریزی کند.او همیشه راه حل مناسب به ذهنش می رسد و سریع یاد می گیرد.در clarat در تیم IT  فعالیت دارد.موسیقی مورد علاقه او Jein از Fettes Brot می باشد.
-      omar: او در رشته علوم کامپیوتر تحصیل کرده است.او به خوبی می تواند صفحات اینترنت را برنامه ریزی کند و مسائل پیچیده را درک کند.او در clarat در تیم IT فعالیت می کند و موسیقی مورد علاقه او Nothing Else Matters از Metallica می باشد.
+      omar: او در رشته علوم کامپیوتر تحصیل کرده است.او به خوبی می تواند صفحات اینترنت را برنامه ریزی کند و مسائل پیچیده را به سرعت درک کند.او در clarat در تیم بازاریابی فعالیت می کند و موسیقی مورد علاقه او Nothing Else Matters از Metallica می باشد.
       patrick: او در رشته تاریخ و سیاست تحصیل کرده است.او به خصوص در مورد کشور جامائیکا آگاهی دارد و می توانی چیزهای پیچیده را به خوبی درک کند.او در clarat در تیم تحقیق فعالیت می کند و موسیقی مورد علاقه او Kingston Be Wise از Protoje می باشد.
       philipp: او در رشته تاریخ٬ سیاست و حقوق تحصیل کرده است.او به خوبی می تواند مسائل پیچیده را درک کند.او در clarat در تیم تحقیق فعالیت می کند و تلاش می کند تا ما بهتر بتوانیم کار کنیم.موسیقی مورد علاقه او his Is Our Science از Astronautalis می باشد.
       sabine: او کارشناس جامعه شناسی است.این بدان معنی است که او اطلاعات زیادی در مورد اجتماع دارد.او به خوبی می تواند مسائل پیچیده را درک کند.در clarat در تیم تحقیق فعالیت می کند و قوانین مربوط به پناهندگان را به ما توضیح می دهد.موسیقی مورد علاقه او Vesna از Kino می باشد.
@@ -1183,7 +1183,7 @@ fa:
       text: |-
         clarat یک پروژه عام المنفعه متعلق به Benckiser Stiftung Zukunft
         (www.benckiser-stiftung.org) می باشد. ما همراه با Benckiser Stiftung از پروژه های موثر مربوط به پشتیبانی کودکان و جوانان حمایت می کنیم.در این راستا یک چیز همیشه به ذهن ما می رسد:خیلی سخت می توان دریافت که چه پیشنهاد های حمایتی به طور کلی وجود دارند و سپس برای ما روشن شد که اگر برای ما کارشناسان تا این حد سخت است نگاه کلی به این موضوع داشته باشیم٬ پس حتما برای کودکان و جوانان که بدنبال کمک واقعی هستند تا چه اندازه سخت تر می تواند باشد و یا برای پناهندگانی که با کشور آلمان آشنایی ندارند؟جواب این سوال:خیلی سخت!و بدین ترتیب ایده پیدایش clarat و تولد آن بوجود آمد.به راحتی کمک یافتن .برای خانواده ها در clarat family و برای پناهندگان در clarat refugees
-      tian: 
+      tian: او در رشته اقتصاد تحصیل کرده است و با نگاه کلی می تواند به خوبی با اعداد کار کند.او در clarat در تیم تحقیق فعالیت می کند و در زمینه کیفیت کار ما فعالیت می کند و موسیقی مورد علاقه او Supergirl از Reamonn می باشد.
       tine: او کارشناس تعلیم و تربیت اجتماعی است.او می تواند به خوبی به آدمها گوش دهد.او همچنین نویسنده است و این بدین معنی است که او می تواند به خوبی داستانهای زیبایی را بنویسد.در clarat در تیم تحقیقات فعالیت دارد و کارشناس تیم زبان ما می باشد.موسیقی مورد علاقه او Survive It از Ghostpoet.
       title: در مورد ما
       verena: او کارشناس مسائل سیاسی است.این بدین معنی است که او اطلاعات زیادی در مورد سیاست و اجتماع دارد.او به خوبی می تواند اطلاعات جمع آوری کند.در clarat در تیم تحقیقات و فرهنگ لغت فعالیت دارد.موسیقی مورد علاقه او Lose It از Oh Wonder می باشد.
@@ -1346,7 +1346,7 @@ fa:
     haeufige-fragen: سوالات رایج
     home: خانه
     impressum: 'اطلاعات کلی '
-    kontakt: 
+    kontakt: تماس
     liste: لیست
     liste-de-services: لیست خدمات
     new: جدید
