--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -986,7 +986,7 @@ ru:
           email_placeholder: E-Mail адрес *
           footer: 
           headline: 
-          message: 
+          message: Ich möchte an der Umfrage teilnehmen
           name_placeholder: Имя *
           text: 
         unavailable_location_modal: "Для твоего местонахождения на данный момент у clarat есть только\nпомощь по телефону или он-лайн. Это значит, тебе помогут по телефону \nили по интернету. Например по E-Mail или в чате. Мы тебе обязательно\nсообщим, как только у clarat появится для тебя помощь рядом с тобой.\nДля этого введи здесь свой E-Mail адрес.\n"
