--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -1092,7 +1092,7 @@ fa:
         code_word: 'نام کمک نزد عرضه کننده:'
         heading: موضوع چیست؟
         offertaxonomy:
-          heading: 'این پیشنهاد تو را در اینجا کمک می کند:'
+          heading: 'با این موضوعات کارمندان اینجا آشنایی دارند:'
       who: کجا این کمک را دریافت می کنی؟
       who_contact_people:
         dr: دکتر
