--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1037,8 +1037,6 @@ de:
         wol: Wol
         zho: Zho
         zza: Zza
-        est: Est
-        geo: Geo
       section:
         family: Family
         refugees: Refugees
@@ -1524,7 +1522,7 @@ de:
         code_word: 'So heißt die Hilfe beim Anbieter:'
         heading: Worum geht's?
         offertaxonomy:
-          heading: 'Dieses Angebot hilft dir bei:'
+          heading: 'Mit diesen Themen kennen sich die Mitarbeiter aus:'
       who: Wo bekommst du diese Hilfe?
       who_contact_people:
         dr: Dr.
@@ -1888,7 +1886,6 @@ de:
         show:
           email: 
           name: 
-          email: 
     placeholders:
       search_form:
         home:
