--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1089,7 +1089,7 @@ en:
         code_word: 'This is what the service provider calls this support service:'
         heading: What's this about?
         offertaxonomy:
-          heading: 'This offer helps you with these topics: '
+          heading: 'The staff here know lots about these topics:'
       who: Where can you get this help?
       who_contact_people:
         dr: Dr.
@@ -1237,7 +1237,7 @@ en:
       michaela: Michaela studied commercial information technology. She's good at inspiring others. And she knows a lot about the media. She's part of the clarat research team. And she also makes sure our website is working properly. Her favourite song is "Digital Love" by Daft Punk.
       nahla: Nahla is an archaeologist. She knows a lot about human history. She can work very quickly. She's in the clarat translator team. She translates clarat into Arabic.  Her favourite song ist "Nassam Allina El Hawa" by Fayrouz.
       nathalie: Nathalie studied human rights and international politics. She can explain things well. And she's a good listener, too. She's part of the clarat research team. She makes sure our website is up-to-date. Her favourite song is "Me in You" by Kings of Convenience.
-      nicole: 
+      nicole: She studied Hungarian. And she is good at programming websites. She always has good ideas for solving problems. Here at clarat she works for the IT department. Her favourite song is "Disorder" from Joy Division.
       nils: |-
         Nils is a computer scientist, which means he knows how to program
         computer programs and websites. He always comes up with good solutions
@@ -1265,7 +1265,7 @@ en:
         don’t know their way around yet? The answer: very difficult! And that's
         how the idea for clarat came about: helping people find help easily. For families on
         clarat family. And for refugees on clarat refugees.
-      tian: 
+      tian: She studied Commerce. She is good at keeping an overview of everything. And she's good with numbers, too. She is part of clarat's research team. She makes sure our work os of high quality. Her favourite song is "Supergirl" by Reamonn.
       tine: |-
         Tine is a social education worker. She's a good listener. And she's a writer, too.
         This means it's easy for her to write nice stories.
@@ -1449,7 +1449,7 @@ en:
     haeufige-fragen: frequently-asked-questions
     home: home
     impressum: impressum
-    kontakt: 
+    kontakt: contact
     liste: liste
     liste-de-services: liste-de-services
     new: new
